--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 }
 
 .postcard-header h1 {
-	width: 350px;
+	width: 338px;
 	margin: 0px;
 }
 
@@ -47,9 +47,10 @@ input {
 
 .postcard-footer {
 	text-align: center;
+	margin: 6%;
 }
 
 button {
 	background-color: grey;
-	padding: 2px;
+	padding: 5px;
 }
